--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is an app to demonstrate the use of leadcreator-gem.
 
-Things you may want to cover:
+- It uses gumby as the frontend framework;
+- It uses bower to manage dependencies;
+- It uses devise as authentication tool;
 
-* Ruby version
+This example app is running in http://leadcreator.herokuapp.com/
 
-* System dependencies
+In order to test your Salesforce app you need to set the callback URL as https://leadcreator.herokuapp.com//callback
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
